[project]
name = "recommenado"
version = "0.1.0"
description = "A package for making article recommendations"
authors = [
    { name = "Aaron Brezel", email = "aaronbrezel@gmail.com" },
    { name = "Eric Evan Chen", email = "eric.evan.chen@columbia.edu" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "tornado",
    "google-generativeai",
    "numpy"
]

[project.scripts]
recommenado = "recommenado.tornadoserver:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
